--- a/.github/workflows/deplotment.yaml
+++ b/.github/workflows/deplotment.yaml
@@ -10,59 +10,60 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Docker Buildx (Optional but Recommended for Multi-Platform Builds)
+      # Set up QEMU & Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
-      # Step 3: Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }} .
-
-      # Step 4: Log in to Azure Container Registry (ACR)
-      - name: Log in to Azure Container Registry
-        uses: docker/login-action@v2
+      # Log in to Azure Container Registry (ACR)
+      - name: Log in to ACR
+        uses: docker/login-action@v3
         with:
           registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
           username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
           password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
-      # Step 5: Push Docker image to ACR
-      - name: Push Docker image to ACR
-        run: |
-          docker push ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }}
-  # CD Job: Deploy Docker Image to AKS
+      # Build & Push Docker Image
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }}
+            ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:latest
+
+  # CD Job: Deploy to AKS
   deploy:
     runs-on: ubuntu-latest
-    needs: ci  # This job depends on the successful completion of the 'ci' job
+    needs: ci
     steps:
-      # Step 1: Set up Azure CLI
-      - name: Set up Azure CLI
-        uses: azure/setup-azurecli@v1
-        with:
-          version: '2.30.0'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Step 2: Azure login
+      # Set up Azure CLI
+      - name: Set up Azure CLI
+        uses: azure/setup-azurecli@v2
+
+      # Azure login
       - name: Azure login
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}  # Service Principal credentials
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Step 3: Set up Kubernetes Context
+      # Set up Kubernetes context
       - name: Set up Kubernetes context
         run: |
           az aks get-credentials --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ secrets.AZURE_AKS_CLUSTER }} --overwrite-existing
 
-      # Step 4: Deploy Docker image to AKS
-      - name: Deploy Docker image to AKS
+      # Deploy using Kubernetes manifest
+      - name: Deploy to AKS
         run: |
-          kubectl set image deployment/my-app my-app=${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }} --record
+          kubectl apply -f kubernetes/deploy.yml
           kubectl rollout status deployment/my-app
 
-      # Step 5: Optional - Clean up Azure CLI
+      # Logout from Azure CLI (Optional)
       - name: Logout from Azure CLI
         run: az logout
