--- a/.github/workflows/deplotment.yaml
+++ b/.github/workflows/deplotment.yaml
@@ -17,13 +17,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Log in to Azure Container Registry (ACR)
-      - name: Log in to ACR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io
-          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+      # Log in to Azure ACR using Service Principal
+      - name: Log in to Azure ACR
+        run: |
+          az acr login --name ${{ secrets.AZURE_REGISTRY_NAME }} \
+            --username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
+            --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
       # Build & Push Docker Image
       - name: Build and Push Docker Image
@@ -67,4 +66,3 @@ jobs:
       # Logout from Azure CLI (Optional)
       - name: Logout from Azure CLI
         run: az logout
-        
