--- a/.github/workflows/deplotment.yaml
+++ b/.github/workflows/deplotment.yaml
@@ -30,36 +30,52 @@ jobs:
           docker tag ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }} ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:latest
           docker push ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }}
           docker push ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/my-app:latest
-  # CD Job: Deploy to AKS
+ 
+ # CD Job: Deploy to AKS
   deploy:
     runs-on: ubuntu-latest
     needs: ci
     steps:
+    # Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Azure CLI
-      - name: Set up Azure CLI
-        uses: azure/setup-azurecli@v2
+    # Install Azure CLI (Fix for missing 'setup-azurecli' issue)
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
 
-      # Azure login
-      - name: Azure login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Azure login using Service Principal
+      - name: Azure Login
+        run: |
+          az login --service-principal \
+            -u ${{ secrets.AZURE_CLIENT_ID }} \
+            -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+            --tenant ${{ secrets.AZURE_TENANT_ID }}
 
-      # Set up Kubernetes context
+    # Set up Kubernetes context for AKS
       - name: Set up Kubernetes context
         run: |
-          az aks get-credentials --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ secrets.AZURE_AKS_CLUSTER }} --overwrite-existing
+          az aks get-credentials \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name ${{ secrets.AZURE_AKS_CLUSTER }} \
+            --overwrite-existing
 
-      # Deploy using Kubernetes manifest
+    # Log in to Azure Container Registry (ACR)
+      - name: Log in to ACR
+        run: |
+          az acr login \
+            --name ${{ secrets.AZURE_REGISTRY_NAME }} \
+            --username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
+            --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+    # Deploy the new Docker image to AKS
       - name: Deploy to AKS
         run: |
           kubectl apply -f kubernetes/deploy.yml
           kubectl rollout status deployment/my-app
 
-      # Logout from Azure CLI (Optional)
+    # Logout from Azure CLI
       - name: Logout from Azure CLI
         run: az logout
-        
