--- a/.github/workflows/deplotment.yaml
+++ b/.github/workflows/deplotment.yaml
@@ -85,7 +85,17 @@ jobs:
             --name ${{ secrets.AZURE_REGISTRY_NAME }} \
             --username ${{ secrets.AZURE_REGISTRY_USERNAME }} \
             --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
+            
+      - name: Install kubectl
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apt-transport-https ca-certificates curl
+          curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
+          sudo apt-get update
+          sudo apt-get install -y kubectl
+          kubectl version --client
+          
       # Deploy the new Docker image to AKS
       - name: Deploy to AKS
         run: |
